[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Theme/MiniTitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Icons/yt_hover.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Icons/yt.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Icons/twitter.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Icons/twitter_hover.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Icons/itch_hover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Icons/itch.png" type="Texture" id=8]
[ext_resource path="res://Sprites/background_tile.png" type="Texture" id=9]
[ext_resource path="res://Resources/Tileset.tres" type="TileSet" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 1, -65535, 2, 1, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -65526, 2, 1, -65525, 2, 1, -65524, 2, 1, -65523, 2, 1, -65522, 2, 1, -65521, 2, 1, -65520, 2, 1, -65519, 2, 1, -65518, 2, 1, -65517, 2, 1, -65516, 2, 1, -65515, 2, 1, -65514, 2, 1, -65513, 2, 1, -65512, 2, 1, -65511, 2, 1, -65510, 2, 1, -65509, 2, 1, -65508, 2, 1, -65507, 2, 1, -65506, 2, 1, -65505, 2, 1, -65504, 2, 1, -65503, 2, 1, -65502, 2, 1, -65501, 2, 1, -65500, 2, 1, -65499, 2, 1, -65498, 2, 1, -65497, 2, 1, -65496, 2, 2, 65535, 2, 65536, 0, 2, 3, 1, 2, 131073, 2, 2, 131073, 3, 2, 131073, 4, 2, 131073, 5, 2, 131073, 6, 2, 131073, 7, 2, 131073, 8, 2, 131073, 9, 2, 131073, 10, 2, 4, 11, 2, 65537, 12, 2, 65537, 13, 2, 65537, 14, 2, 65537, 15, 2, 65537, 16, 2, 65537, 17, 2, 65537, 18, 2, 65537, 19, 2, 65537, 20, 2, 65537, 21, 2, 65537, 22, 2, 65537, 23, 2, 65537, 24, 2, 65537, 25, 2, 65537, 26, 2, 65537, 27, 2, 65537, 28, 2, 65537, 29, 2, 3, 30, 2, 131073, 31, 2, 131073, 32, 2, 131073, 33, 2, 131073, 34, 2, 131073, 35, 2, 131073, 36, 2, 131073, 37, 2, 131073, 38, 2, 131073, 39, 2, 4, 40, 2, 65538, 131071, 2, 65536, 65536, 2, 65538, 65546, 2, 65536, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65537, 65550, 2, 65537, 65551, 2, 65537, 65552, 2, 65537, 65553, 2, 65537, 65554, 2, 65537, 65555, 2, 65537, 65556, 2, 65537, 65557, 2, 65537, 65558, 2, 65537, 65559, 2, 65537, 65560, 2, 65537, 65561, 2, 65537, 65562, 2, 65537, 65563, 2, 65537, 65564, 2, 65537, 65565, 2, 65538, 65575, 2, 65536, 65576, 2, 65538, 196607, 2, 65536, 131072, 2, 65538, 131082, 2, 65536, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65537, 131086, 2, 65537, 131087, 2, 65537, 131088, 2, 65537, 131089, 2, 65537, 131090, 2, 65537, 131091, 2, 65537, 131092, 2, 65537, 131093, 2, 65537, 131094, 2, 65537, 131095, 2, 65537, 131096, 2, 65537, 131097, 2, 65537, 131098, 2, 65537, 131099, 2, 65537, 131100, 2, 65537, 131101, 2, 65538, 131111, 2, 65536, 131112, 2, 65538, 262143, 2, 65536, 196608, 2, 65538, 196618, 2, 131072, 196619, 2, 131073, 196620, 2, 131073, 196621, 2, 131073, 196622, 2, 131073, 196623, 2, 131073, 196624, 2, 131073, 196625, 2, 131073, 196626, 2, 131073, 196627, 2, 131073, 196628, 2, 131073, 196629, 2, 131073, 196630, 2, 131073, 196631, 2, 131073, 196632, 2, 131073, 196633, 2, 131073, 196634, 2, 131073, 196635, 2, 131073, 196636, 2, 131073, 196637, 2, 131074, 196647, 2, 65536, 196648, 2, 65538, 327679, 2, 65536, 262144, 2, 65538, 262183, 2, 65536, 262184, 2, 65538, 393215, 2, 65536, 327680, 2, 65538, 327719, 2, 65536, 327720, 2, 65538, 458751, 2, 65536, 393216, 2, 65538, 393230, 2, 0, 393231, 2, 1, 393232, 2, 1, 393233, 2, 1, 393234, 2, 1, 393235, 2, 1, 393236, 2, 1, 393237, 2, 1, 393238, 2, 1, 393239, 2, 1, 393240, 2, 1, 393241, 2, 2, 393255, 2, 65536, 393256, 2, 65538, 524287, 2, 65536, 458752, 2, 65538, 458766, 2, 65536, 458767, 2, 65537, 458768, 2, 65537, 458769, 2, 65537, 458770, 2, 65537, 458771, 2, 65537, 458772, 2, 65537, 458773, 2, 65537, 458774, 2, 65537, 458775, 2, 65537, 458776, 2, 65537, 458777, 2, 65538, 458791, 2, 65536, 458792, 2, 65538, 589823, 2, 65536, 524288, 2, 65538, 524302, 2, 65536, 524303, 2, 65537, 524304, 2, 65537, 524305, 2, 65537, 524306, 2, 65537, 524307, 2, 65537, 524308, 2, 65537, 524309, 2, 65537, 524310, 2, 65537, 524311, 2, 65537, 524312, 2, 65537, 524313, 2, 65538, 524327, 2, 65536, 524328, 2, 65538, 655359, 2, 65536, 589824, 2, 65538, 589838, 2, 65536, 589839, 2, 65537, 589840, 2, 65537, 589841, 2, 65537, 589842, 2, 65537, 589843, 2, 65537, 589844, 2, 65537, 589845, 2, 65537, 589846, 2, 65537, 589847, 2, 65537, 589848, 2, 65537, 589849, 2, 65538, 589863, 2, 65536, 589864, 2, 65538, 720895, 2, 65536, 655360, 2, 65538, 655374, 2, 65536, 655375, 2, 65537, 655376, 2, 65537, 655377, 2, 65537, 655378, 2, 65537, 655379, 2, 65537, 655380, 2, 65537, 655381, 2, 65537, 655382, 2, 65537, 655383, 2, 65537, 655384, 2, 65537, 655385, 2, 65538, 655399, 2, 65536, 655400, 2, 65538, 786431, 2, 65536, 720896, 2, 65538, 720910, 2, 65536, 720911, 2, 65537, 720912, 2, 65537, 720913, 2, 65537, 720914, 2, 65537, 720915, 2, 65537, 720916, 2, 65537, 720917, 2, 65537, 720918, 2, 65537, 720919, 2, 65537, 720920, 2, 65537, 720921, 2, 65538, 720935, 2, 65536, 720936, 2, 65538, 851967, 2, 65536, 786432, 2, 65538, 786446, 2, 65536, 786447, 2, 65537, 786448, 2, 65537, 786449, 2, 65537, 786450, 2, 65537, 786451, 2, 65537, 786452, 2, 65537, 786453, 2, 65537, 786454, 2, 65537, 786455, 2, 65537, 786456, 2, 65537, 786457, 2, 65538, 786471, 2, 65536, 786472, 2, 65538, 917503, 2, 65536, 851968, 2, 65538, 851982, 2, 65536, 851983, 2, 65537, 851984, 2, 65537, 851985, 2, 65537, 851986, 2, 65537, 851987, 2, 65537, 851988, 2, 65537, 851989, 2, 65537, 851990, 2, 65537, 851991, 2, 65537, 851992, 2, 65537, 851993, 2, 65538, 852007, 2, 65536, 852008, 2, 65538, 983039, 2, 65536, 917504, 2, 65538, 917518, 2, 65536, 917519, 2, 65537, 917520, 2, 65537, 917521, 2, 65537, 917522, 2, 65537, 917523, 2, 65537, 917524, 2, 65537, 917525, 2, 65537, 917526, 2, 65537, 917527, 2, 65537, 917528, 2, 65537, 917529, 2, 65538, 917543, 2, 65536, 917544, 2, 65538, 1048575, 2, 65536, 983040, 2, 65538, 983054, 2, 65536, 983055, 2, 65537, 983056, 2, 65537, 983057, 2, 65537, 983058, 2, 65537, 983059, 2, 65537, 983060, 2, 65537, 983061, 2, 65537, 983062, 2, 65537, 983063, 2, 65537, 983064, 2, 65537, 983065, 2, 65538, 983079, 2, 65536, 983080, 2, 65538, 1114111, 2, 65536, 1048576, 2, 65538, 1048590, 2, 131072, 1048591, 2, 131073, 1048592, 2, 131073, 1048593, 2, 131073, 1048594, 2, 131073, 1048595, 2, 131073, 1048596, 2, 131073, 1048597, 2, 131073, 1048598, 2, 131073, 1048599, 2, 131073, 1048600, 2, 131073, 1048601, 2, 131074, 1048615, 2, 65536, 1048616, 2, 65538, 1179647, 2, 65536, 1114112, 2, 65538, 1114151, 2, 65536, 1114152, 2, 65538, 1245183, 2, 65536, 1179648, 2, 65538, 1179687, 2, 65536, 1179688, 2, 65538, 1310719, 2, 65536, 1245184, 2, 65538, 1245223, 2, 65536, 1245224, 2, 65538, 1376255, 2, 65536, 1310720, 2, 65538, 1310736, 2, 0, 1310737, 2, 1, 1310738, 2, 1, 1310739, 2, 1, 1310740, 2, 1, 1310741, 2, 1, 1310742, 2, 1, 1310743, 2, 2, 1310759, 2, 65536, 1310760, 2, 65538, 1441791, 2, 65536, 1376256, 2, 65538, 1376270, 2, 0, 1376271, 2, 1, 1376272, 2, 65540, 1376273, 2, 65537, 1376274, 2, 65537, 1376275, 2, 65537, 1376276, 2, 65537, 1376277, 2, 65537, 1376278, 2, 65537, 1376279, 2, 65539, 1376280, 2, 1, 1376281, 2, 2, 1376295, 2, 65536, 1376296, 2, 65538, 1507327, 2, 65536, 1441792, 2, 65539, 1441793, 2, 1, 1441794, 2, 1, 1441795, 2, 1, 1441796, 2, 1, 1441797, 2, 1, 1441798, 2, 1, 1441799, 2, 1, 1441800, 2, 1, 1441801, 2, 1, 1441802, 2, 1, 1441803, 2, 1, 1441804, 2, 1, 1441805, 2, 1, 1441806, 2, 65540, 1441807, 2, 65537, 1441808, 2, 65537, 1441809, 2, 65537, 1441810, 2, 65537, 1441811, 2, 65537, 1441812, 2, 65537, 1441813, 2, 65537, 1441814, 2, 65537, 1441815, 2, 65537, 1441816, 2, 65537, 1441817, 2, 65539, 1441818, 2, 1, 1441819, 2, 1, 1441820, 2, 1, 1441821, 2, 1, 1441822, 2, 1, 1441823, 2, 1, 1441824, 2, 1, 1441825, 2, 1, 1441826, 2, 1, 1441827, 2, 1, 1441828, 2, 1, 1441829, 2, 1, 1441830, 2, 1, 1441831, 2, 65540, 1441832, 2, 65538, 1572863, 2, 131072, 1507328, 2, 131073, 1507329, 2, 131073, 1507330, 2, 131073, 1507331, 2, 131073, 1507332, 2, 131073, 1507333, 2, 131073, 1507334, 2, 131073, 1507335, 2, 131073, 1507336, 2, 131073, 1507337, 2, 131073, 1507338, 2, 131073, 1507339, 2, 131073, 1507340, 2, 131073, 1507341, 2, 131073, 1507342, 2, 131073, 1507343, 2, 131073, 1507344, 2, 131073, 1507345, 2, 131073, 1507346, 2, 131073, 1507347, 2, 131073, 1507348, 2, 131073, 1507349, 2, 131073, 1507350, 2, 131073, 1507351, 2, 131073, 1507352, 2, 131073, 1507353, 2, 131073, 1507354, 2, 131073, 1507355, 2, 131073, 1507356, 2, 131073, 1507357, 2, 131073, 1507358, 2, 131073, 1507359, 2, 131073, 1507360, 2, 131073, 1507361, 2, 131073, 1507362, 2, 131073, 1507363, 2, 131073, 1507364, 2, 131073, 1507365, 2, 131073, 1507366, 2, 131073, 1507367, 2, 131073, 1507368, 2, 131074 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -90.0
margin_right = 96.0
margin_bottom = -59.0
custom_fonts/font = ExtResource( 1 )
text = "ZOMBIE MARAUD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -44.0
margin_right = 56.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Control/VBoxContainer"]
margin_right = 112.0
margin_bottom = 26.0
size_flags_vertical = 3
text = "Play"

[node name="Options" type="Button" parent="Control/VBoxContainer"]
margin_top = 30.0
margin_right = 112.0
margin_bottom = 56.0
size_flags_vertical = 3
text = "Options"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
margin_top = 60.0
margin_right = 112.0
margin_bottom = 88.0
size_flags_vertical = 3
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 254.0
margin_top = 158.0
margin_right = 310.0
margin_bottom = 174.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YTButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="ItchButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="TwitterButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="XieneDev" type="Label" parent="."]
margin_left = 128.0
margin_top = 168.0
margin_right = 192.0
margin_bottom = 178.0
text = "XieneDev"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 1 )
[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/YTButton" to="." method="_on_YTButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/ItchButton" to="." method="_on_ItchButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/TwitterButton" to="." method="_on_TwitterButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
